# CANONLOOP

./: .env.example  .gitignore  AGENTS.md  AI_DISCLOSURE.md  ASSET_MANIFEST.json  ATTRIBUTIONS.md  CONTRIBUTING.md  LICENSE  README.md  RIGHTS_AND_PROVENANCE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: eslint.config.mjs  next.config.ts  package.json  vitest.config.ts
artifacts/: canonloop-demo.srt
docs/: 00-hackathon-requirements.md  01-product-brief.md  02-prd.md  03-architecture.md  04-agent-design.md  05-visual-canon-schema.md  06-genblaze-integration.md  07-backblaze-b2-integration.md  08-continuity-evaluation.md  09-security-threat-model.md  10-rights-and-provenance.md  11-testing-strategy.md  12-performance-and-cost.md  13-demo-script.md  14-video-storyboard.md  15-risk-register.md  16-judge-scorecard.md  17-known-limitations.md  18-submission-checklist.md  19-design-system.md  20-design-fidelity-ledger.md
examples/verified-runs/: no-key-genblaze-evidence.json
scripts/: check_submission_readiness.py  submission_readiness.py
services/api/canonloop/: __init__.py  __main__.py  agents.py  app.py  b2_archive.py  config.py  fixtures.py  genblaze_integration.py  models.py  packager.py  paths.py  security.py
services/api/tests/: test_agents.py  test_app_and_package.py  test_genblaze.py  (+3 more)
submission/: b2-and-genblaze-usage.md  demo-video-script.md  demo-video-storyboard.md  devpost-description.md  devpost-receipt.md  providers-and-models.md  short-description.txt  submission-manifest.json  testing-instructions.md
(+8 files in other folders)
