[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "canonloop-api"
version = "0.1.0"
description = "Autonomous visual continuity director for generative media"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.42,<2",
  "fastapi>=0.128,<1",
  "genblaze-cli>=0.3.4,<0.4",
  "genblaze-core>=0.3.6,<0.4",
  "genblaze-openai>=0.3.2,<0.4",
  "genblaze-s3>=0.3.5,<0.4",
  "pillow>=12,<13",
  "pydantic-settings>=2.12,<3",
  "python-multipart>=0.0.22,<1",
  "uvicorn[standard]>=0.40,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.19,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.14,<1",
  "types-Pillow>=10,<11"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["services/api"]
testpaths = ["services/api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["canonloop"]
mypy_path = "services/api"

[tool.setuptools]
package-dir = {"" = "services/api"}

[tool.setuptools.packages.find]
where = ["services/api"]
include = ["canonloop*"]

